<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/latarbelakang">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_simC"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/simb"
                        android:background="@color/SimAC"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMC"
                            android:gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMC4"
                            android:gravity="left"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMCdes"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMA1"
                            android:gravity="left"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMA2"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SyaratSIMA3"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/btnCMoveJam"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:text="Cek Jam Buka"/>
                <Button
                    android:id="@+id/btnCMoveBiaya"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/btnCMoveJam"
                    android:text="Cek Biaya " />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>