<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/latarbelakang">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_waktuoper"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <ImageView
                        android:id="@+id/ivJambaru"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/jambaru" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:layout_toEndOf="@id/ivJambaru">
                            <TextClock
                                android:id="@+id/tvJamBerdetik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:layout_marginStart="20dp"
                                android:format12Hour="H:mm:ss"
                                android:textSize="25sp"
                                android:timeZone="GMT+7" />

                            <TextView
                                android:id="@+id/tvHariTanggal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:fontFamily="@font/montserrat"
                                android:textSize="18sp"/>

                        </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktuoper"
                            android:gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktuoper1"
                            android:gravity="left"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktuoper2"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:id="@+id/tvharinya"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktuoper4"
                            android:layout_marginTop="10dp"
                            android:gravity="left"
                            android:fontFamily="@font/montserrat"
                            android:textSize="16sp"
                            android:textColor="@color/warnapembuka"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/waktuoper5"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:id="@+id/tvjamnya"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:layout_marginTop="10dp"
                            android:text="@string/waktuoper7"
                            android:gravity="left"
                            android:textSize="16sp"
                            android:lineSpacingExtra="2dp"
                            android:textColor="@color/warnapembuka"/>
                        <TextView
                            android:id="@+id/waktuoper99"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:lineSpacingExtra="2dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>